@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* allow annotations for types added by patterns
+	this breaks backwards API compatibility of Type#getAnnotation(), but is likely to affect a generic backoffice only
 * allow annotations for fields of types added by patterns
 * allow annotations for fields added by patterns
 * replace Model.isDatabaseLogEnabled/getDatabaseLogThreshold/getDatabaseLogSQL by getDatabaseListener
